CTM events+ Changes to Foreign tree

--- a/localisation/KR_Mexico_l_english.yml
+++ b/localisation/KR_Mexico_l_english.yml
@@ -28,7 +28,9 @@ MEX_Sinarquist_Youth_idea:0 "Sinarquist Youth"
 MEX_Cheap_Imports:0 "Cheap Imports"
 MEX_Cars:0 "Mexican Automobile Industry"
 MEX_Tarrifs:0 "Protective Tariffs"
-
+MEX_Teachers:0 "Fulfilled Teacher's Union Demands"
+MEX_Railway:0 "Fulfilled Railway Worker's Union Demands"
+MEX_Miner:0 "Fulfilled Miner's Union Demands"
 ### Parties ###
 MEX_social_democrat_party:0 "PRI"
 MEX_social_democrat_party_long:0 "Partido Revolucionario Institucional"
@@ -270,7 +272,18 @@ mexico.61.t:0 "Choosing An Economic Plan"
 mexico.61.d:0 "It is time for Mexico to choose an economic plan for the coming years. On one hand we have Plan "Hope" which focuses on the civilian sector of our economy and improving infastructure and on the other hand we have Plan "Unity" which focuses on heavy industrial expansion and military industry. Which one should we pick?"
 mexico.61.a:0 "Plan Hope"
 mexico.61.b:0 "Plan Unity"
-
+mexico.62.t:0 "Teacher's Union Demands"
+mexico.62.d:0 "The powerful Teacher's Union have a strong position in the CTM, and have just come forward with demands for better rights and pay for teachers. Fulfilling their demands will likely improve the quality of our nation's education, but it will obviously cost us some money. What should we do?"
+mexico.62.a:0 "Fulfill their demands"
+mexico.62.b:0 "Refuse to fulfill their demands"
+mexico.63.t:0 "Railway Worker's Union Demands"
+mexico.63.d:0 "The powerful Railway Worker's Union have a strong position in the CTM, and have just come forward with demands for better rights and pay for Railway Workers. Fulfilling their demands will likely improve the quality of our nation's railways and trains, but it will obviously cost us some money. What should we do?"
+mexico.63.a:0 "Fulfill their demands"
+mexico.63.b:0 "Refuse to fulfill their demands"
+mexico.64.t:0 "Miner's Union Demands"
+mexico.64.d:0 "The powerful Miner's Union have a strong position in the CTM, and have just come forward with demands for better rights and pay for Miners. Fulfilling their demands will likely improve the quality of our nation's mines and resource excavation, but it will obviously cost us some money. What should we do?"
+mexico.64.a:0 "Fulfill their demands"
+mexico.64.b:0 "Refuse to fulfill their demands"
 ### Foci ###
 MEX_Embrace_Totalism:0 "Embrace Totalism"
 MEX_Establish_the_Maximato:0 "Establish The Maximato"
@@ -398,7 +411,12 @@ MEX_Language:0 "Language Question"
 MEX_Secret_Police:0 "Establish Secret Police"
 MEX_Vigilantees:0 "Recruit Vigilantes"
 MEX_End_The_Rebellion:0 "End the Rebellion"
-
+MEX_Looking_Outwards:0 "Looking Outwards"
+MEX_Reconquista:0 "Reconquista"
+MEX_California:0 "Retake California"
+MEX_Socialism_In_The_Carribean:0 "Socialism In The Carribean"
+MEX_Join_The_Internationale:0 "Join The Internationale"
+MEX_Intervention_In_Central_America:0 "Intervention In Central America"
 ### Tooltips ###
 Calles:0 "Calles has taken power"
 Toledano:0 "Toledano has inherited the presidency"
