Third Mexican-American war events

--- a/localisation/KR_Mexico_l_english.yml
+++ b/localisation/KR_Mexico_l_english.yml
@@ -284,6 +284,25 @@ mexico.64.t:0 "Miner's Union Demands"
 mexico.64.d:0 "The powerful Miner's Union have a strong position in the CTM, and have just come forward with demands for better rights and pay for Miners. Fulfilling their demands will likely improve the quality of our nation's mines and resource excavation, but it will obviously cost us some money. What should we do?"
 mexico.64.a:0 "Fulfill their demands"
 mexico.64.b:0 "Refuse to fulfill their demands"
+mexico.64.t:0 ""The Americans demand their lost territories"
+mexico.64.d:0 "During the American Civil War, the Mexican army managed to conquer a good part of the western and southwestern American states. Despite a well-organized campaign of both non-violent resistance and guerilla attacks by the local Anglo population, we are determined to continue our occupation. Now, with their Civil War over, the American government is demanding that we return them these former territories. And, according to our intelligence reports, they are even considering going to war against Mexico for this! Even if we know that we have a historical right to those lands, we must keep in mind that the Americans are much more strong and organized now - it is very possible that, in case of war, we may not resist their offensive."
+mexico.64.a:0 "Accept their demands, we can't hope to win another war"
+mexico.64.b:0 "Let them come, we're ready to defend our land"
+mexico.65.t:0 "Mexico accepts our demands"
+mexico.65.d:0 "The government of Mexico has folded before our might and accepted our demands. Now the former western and southwestern states are back under our American control!"
+mexico.65.a:0 "Great!"
+mexico.66.t:0 "Mexico declines our demands"
+mexico.66.d:0 "The government of Mexico has refused to follow our demands and are insisting that the occupied western and southwestern American states are their rightfull territory. We must attack them now!"
+mexico.66.a:0 "That's it - Ready the troops and attack"
+mexico.66.b:0 "We're not ready for war now - Back down"
+mexico.67.t:0 "Peace with the Mexicans"
+mexico.67.d:0 "We have defeated the Mexicans on the field of battle and have driven them out of our land, perhaps it is time to sue for peace?
+mexico.67.a:0 "Sue for peace, demand our lands!"
+mexico.67.b:0 "No peace until we march on Mexico City"
+mexico.68.t:0 "Americans Sue for peace"
+mexico.68.d:0 "We have been defeated by the American forces, they have driven us back to our own territory, we have just recieved a message from the Americans that they are willing to make with us. Should we return the American territory?"
+mexico.68.a:0 "We have no choice..."
+mexico.68.b:0 "Never! We will fight to the death!"
 ### Foci ###
 MEX_Embrace_Totalism:0 "Embrace Totalism"
 MEX_Establish_the_Maximato:0 "Establish The Maximato"
