Reclaiming the South West for USA and AUS

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -161,6 +161,8 @@ TEX_rebuilding_the_pacific:0 "Rebuilding the Pacific"
 TEX_rebuilding_the_pacific_desc:0 ""
 TEX_rebuilding_new_england:0 "Rebuilding New England"
 TEX_rebuilding_new_england_desc:0 ""
+TEX_reclaim_south_west:0 "Reclaim the South West"
+TEX_reclaim_south_west_desc:0 ""
 TEX_industrial_security_act:0 "The Industrial Security Act"
 TEX_industrial_security_act_desc:0 ""
 TEX_infastructure_renewel:0 "Infrastructure Renewal act"
