--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -220,6 +220,8 @@ USA_rebuiliding_the_south:0 "Rebuilding the South"
 USA_rebuiliding_the_south_desc:0 ""
 USA_rebuiliding_the_new_england:0 "Rebuilding the New England"
 USA_rebuiliding_the_new_england_desc:0 ""
+USA_reclaim_south_west:0 "Reclaiming The South West"
+USA_reclaim_south_west_desc:0 ""
 USA_rebuilt_america:0 "America is Rebuilt"
 USA_rebuilt_america_desc:0 ""
 USA_america_reborn:0 "America is reborn"
