Better peace for Mexican-American war

--- a/localisation/KR_Mexico_l_english.yml
+++ b/localisation/KR_Mexico_l_english.yml
@@ -98,55 +98,27 @@ mexico.11.b:0 "We are not ready for war"
 mexico.12.t:0 "The second Mexican-American War"
 mexico.12.d:0 "Our refusal to accept the Mexican territorial claims was the last straw. They decided to declare war upon us in order to try to gain those disputed territories by force. Now, troops of the National Guard, together with volunteers from local population, are being mobilised to repel the Mexican assaults!"
 mexico.12.a:0 "They must be stopped!"
-mexico.13.t:0 "Mexicans occupy the south west"
-mexico.13.d:0 "How could this happen?! The Mexican Army has crossed the entire south and is now occupying all state capitals. Maybe this is our last chance to attempt to end this damn war..."
-mexico.13.a:0 "Offer peace treaty, recognise Mexican territorial gains"
-mexico.13.b:0 "No, the war will continue until we march through Mexico City!"
-mexico.16.d:0 "What a disaster! A good portion of the Southwestern USA has been lost to the advancing Mexican Army. With their troops threatening to advance even deeper, this is the time to accept our defeat and cede them the disputed territory."
-mexico.16.a:0 "Accept their claims, we must end this war right now"
-mexico.16.b:0 "No compromise until we are marching on their capital"
-mexico.17.t:0 "We're losing the Mexican-American War"
-mexico.17.d:0 "The American resistance is being tougher than we thought. Not only we did not achieve any of our major goals so far, but the American army has advanced across the Rio Grande, occupying important cities in the border. We must accept our defeat..."
-mexico.17.a:0 "Accept our defeat, propose a peace settlement"
-mexico.17.b:0 "No peace until we're marching on Washington"
-mexico.18.t:0 "A peace offer from Mexico"
-mexico.18.d:0 "Our brave Army and National Guardsmen, supplemented with volunteers from local population, successfully repelled the Mexican assault. Now the humiliated Mexican leadership offers us cease fire, in which they promise to withdrawn all their troops from US soil. How shall we react?"
-mexico.18.a:0 "Yes, accept their proposal"
-mexico.18.b:0 "No peace until we're marching on Mexico City"
-mexico.19.t:0 "The Treaty of Tangamandapio"
-mexico.19.d:0 "The Americans have accepted our peace offer. Now we must withdrawn from US soil and relinquish all our territorial claims..."
-mexico.19.a:0 "¡Oh! Y ahora, ¿Quién podrá defendernos?"
-mexico.20.t:0 "Longists occupy parts of the disputed territory"
-mexico.20.d:0 "The ongoing American Civil War, together with our direct intervention against the Federal Government, has allowed the Longist rebels to seize parts of our rightful lands, such as eastern Tejas! How shall we deal with this violation of our territorial integrity?"
-mexico.20.a:0 "Demand their immediate withdrawal from disputed territory!"
-mexico.20.b:0 "It is too risky"
-mexico.21.t:0 "Mexico demands our withdrawal from Texas"
-mexico.21.d:0 "During our ongoing assault, we have managed to capture parts of the state of Texas, which is claimed by Mexico as well. They have issued an official diplomatic demand for our immediate withdrawal from disputed territory. What shall we do?"
-mexico.21.a:0 "We must accept their demands, we can't afford another front"
-mexico.21.b:0 "Never, Texas will never be Mexican!"
-mexico.22.t:0 "American Union state refuses our demands"
-mexico.22.d:0 "The foolish leadership of the American Union state refused to withdrawn their troops from our rightful territory. What shall we do?"
-mexico.22.a:0 "War will solve this!"
-mexico.22.b:0 "t is too risky...."
-mexico.23.t:0 "We're losing the war against the Longists"
-mexico.23.d:0 "The American Union State resistance is being tougher than we thought. Not only we did not achieve any of our major goals so far, but the Longist army has advanced across the Rio Grande, occupying important cities in the border. We must accept our defeat and withdraw from Tejas and other areas of the Deep South."
-mexico.23.a:0 "Accept our defeat, propose a peace settlement"
-mexico.23.b:0 "No peace until we're marching on Atlanta"
-mexico.24.t:0 "A peace offer from Mexico"
-mexico.24.d:0 "Our brave forces have successfully repelled the Mexican assault. Now the humiliated Mexican leadership offers us cease fire, in which they promise to withdrawn all their troops from AUS soil. How shall we react?"
-mexico.24.a:0 "Yes, accept their proposal"
-mexico.24.b:0 "No peace until we're marching on Mexico City"
-mexico.25.t:0 "We're losing the war against Mexico"
-mexico.25.d:0 "The Mexican Army is much tougher than we thought. Not only we did not achieve any of our major goals so far, but their army has advanced across the Deep South, occupying important American cities. We must accept our defeat and withdraw from Texas."
-mexico.25.a:0 "Accept our defeat, propose a peace settlement"
-mexico.25.b:0 "No peace until we're marching on Mexico City"
-mexico.26.t:0 "A peace offer from the American Union State"
-mexico.26.d:0 "Our brave forces have successfully repelled the Longist assaults. Now their leadership offers us cease fire, in which they promise to withdrawn all their troops from disputed Tejas"
-mexico.26.a:0 "Yes, accept their proposal"
-mexico.26.b:0 "No peace until we're marching on Atlanta"
-mexico.27.t:0 "Lost territories back under our control"
-mexico.27.d:0 "The Americans have accepted our demands and several territories lost in the Treaty of Guadaloupe Hidalgo are now back under our control! These territories, however, are not uninhabited wastelands as they used to be back in 1848: a large and well-armed Anglo population in these states will pose a great threat to the rule of our government and occupying forces."
-mexico.27.a:0 "Well, I wasn't expecting that..."
+mexico.13.t:0 ""The Treaty of Acapulco"
+mexico.13.d:0 "We've succesfully beaten the American army and conquered the disputed border states. Now, we can send their humiliated leadership a peace in which they promise to recognize our teritorial gains and withdrawn from disputed teritory, however we could keep going in this war to try and get more land. What should we do?"
+mexico.13.a:0 "Sue for peace, we have had enough"
+mexico.13.b:0 "We shall reclaim all of our lands"
+mexico.14.t:0 "We have lost much of our territory!"
+mexico.14.d:0 "What a disaster! A good portion of the Southwestern USA has been lost to the advancing Mexican Army. The Mexicans have offered us peace, with their troops threatening to advance even deeper, this is the time to accept our defeat and cede them the disputed territory."
+mexico.14.a:0 "Accept their claims, we must end this war right now"
+mexico.14.b:0 "No compromise until we are marching on their capital"
+mexico.15.t:0 "The Treaty of Acapulco"
+mexico.15.d:0 "According to the Treaty of Acapulco, the Americans must cede a good part of their territory to us"
+mexico.15.a:0 "Hooray!"
+mexico.16.t:0 "The Treaty of Acapulco"
+mexico.16.d:0 "We've succesfully beaten the American army and conquered the disputed border states. Now, we can send their humiliated leadership a peace in which they promise to recognize our teritorial gains and withdrawn from all the territories that we cede them in our last war. Taking any more would be loco!"
+mexico.16.a:0 "Sue for peace"
+mexico.17.t:0 "Peace offer from Mexico"
+mexico.17.d:0 "What a disaster! A good portion of the Southwestern USA has been lost to the advancing Mexican Army. The Mexicans have offered us peace, with their troops threatening to advance even deeper, this is the time to accept our defeat and cede them the disputed territory."
+mexico.17.a:0 "Accept The Offer"
+mexico.17.b:0 "Decline The Offer"
+mexico.18.t:0 "The Treaty of Acapulco
+mexico.18.d:0 "According to the Treaty of Acapulco, the Americans must cede all the lands we ceded to them in our last war back to us"
+mexico.18.a:0 "Hooray!"
 mexico.28.t:0 "War against the Pacific States?"
 mexico.28.d:0 "Another rebel faction of the American Civil War, the Pacific States of America, currently control an area composed of the western seaboard - this includes our rightful territories of Alta California. We should attack them immediately!"
 mexico.28.a:0 "Attack!"
