--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -1100,6 +1100,9 @@ poland.192.e:0 "To our glorious future!"
 poland.193.t:0 "The Death of Józef Piłsudski"
 poland.193.d:0 "Józef Piłsudski, who has been Marshall of the Kingdom of Poland since its inception at the end of the Weltkrieg, passed away in his sleep late last night. Józef had been the face of the Polish military for many years and a strong political activist that many admired. His loss will surely leave the Polish military weakeneed and the future of Poland bleaker."
 poland.193.a:0 "A great loss for the nation."
+poland.194.t:0 "Marriage to the Sea"
+poland.194.d:0 "Ever since the dissolution of our country in 1793, the Polish nation has lost our access the sea. But now, after almost 150 years of seperation, we have returned to our long-lost love. To celebrate this grand reunion, many ceremonies are being held along the coasts under our control, where the Polish nation is symbolically reunited with the sea. Many of these ceremonies are marked with 21 gun salutes, Catholic services, and much general celebration."
+poland.194.a:0 "We will never leave you again!"
 
 ### Global Flags ###
 POL_REPUBLIC:0 "Declared the Polish Republic"
