--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -1709,6 +1709,37 @@ TRM_RUS_national_populist:0 "Russian Republic"
 TRM_RUS_national_populist_ADJ:0 "Russian"
 TRM_RUS_national_populist_DEF:0 "The Russian Republic"
 
+MAD_DRAV_authoritarian_democrat:0 "Dravidia Nadu"
+MAD_DRAV_authoritarian_democrat_ADJ:0 "Dravidian"
+MAD_DRAV_authoritarian_democrat_DEF:0 "Dravidia Nadu"
+MAD_DRAV_market_liberal:0 "Dravidia Nadu"
+MAD_DRAV_market_liberal_ADJ:0 "Dravidian"
+MAD_DRAV_market_liberal_DEF:0 "Dravidia Nadu"
+MAD_DRAV_national_populist:0 "Dravidia Nadu"
+MAD_DRAV_national_populist_ADJ:0 "Dravidian"
+MAD_DRAV_national_populist_DEF:0 "Dravidia Nadu"
+MAD_DRAV_paternal_autocrat:0 "Dravidia Nadu"
+MAD_DRAV_paternal_autocrat_ADJ:0 "Dravidian"
+MAD_DRAV_paternal_autocrat_DEF:0 "Dravidia Nadu"
+MAD_DRAV_radical_socialist:0 "Dravidia Republic"
+MAD_DRAV_radical_socialist_ADJ:0 "Dravidian"
+MAD_DRAV_radical_socialist_DEF:0 "The Dravidian Republic"
+MAD_DRAV_social_conservative:0 "Dravidia Nadu"
+MAD_DRAV_social_conservative_ADJ:0 "Dravidian"
+MAD_DRAV_social_conservative_DEF:0 "Dravidia Nadu"
+MAD_DRAV_social_democrat:0 "Dravidia Nadu"
+MAD_DRAV_social_democrat_ADJ:0 "Dravidian"
+MAD_DRAV_social_democrat_DEF:0 "Dravidia Nadu"
+MAD_DRAV_social_liberal:0 "Dravidia Nadu"
+MAD_DRAV_social_liberal_ADJ:0 "Dravidian"
+MAD_DRAV_social_liberal_DEF:0 "Dravidia Nadu"
+MAD_DRAV_syndicalist:0 "Dravidian Commune"
+MAD_DRAV_syndicalist_ADJ:0 "Dravidian"
+MAD_DRAV_syndicalist_DEF:0 "The Dravidian Commune"
+MAD_DRAV_totalist:0 "Dravidian Commune"
+MAD_DRAV_totalist_ADJ:0 "Dravidian"
+MAD_DRAV_totalist_DEF:0 "The Dravidian Commune"
+
 LYB_ITA_subject:0 "Italian North Africa"
 LYB_ITA_subject_DEF:0 "Italian North Africa"
 LYB_ITA_subject_ADJ:0 "Libyan"
