Some More work on the AUS

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -233,11 +233,9 @@ TEX_reclaim_new_england:0 "Reclaim New England"
 TEX_reclaim_new_england_desc:0 ""
 TEX_reclaim_hawaii:0 "Reclaim Hawaii"
 TEX_reclaim_hawaii_desc:0 ""
-TEX_take_a_side:0 "Take a side"
-TEX_take_a_side_desc:0 ""
-TEX_league_of_nations:0 "League of Nations"
+TEX_league_of_nations:0 "League of American States"
 TEX_league_of_nations_desc:0 ""
-american_states_league_of_nations:0 "League of Nations"
+american_states_league_of_nations:0 "League of American States"
 TEX_american_school:0 "American School"
 TEX_american_school_desc:0 ""
 TEX_american_cooperation:0 "American League Cooperation"
@@ -252,7 +250,12 @@ TEX_german_trade:0 "German Trade ties"
 TEX_german_trade_desc:0 ""
 TEX_german_research:0 "German Research Cooperation"
 TEX_german_research_desc:0 ""
-
+TEX_war_plan_red:0 "War Plan Red"
+TEX_war_plan_red_desc:0 ""
+TEX_entente_embargo:0 "Embargo the Entente"
+TEX_entente_embargo_desc:0 ""
+TEX_invade_canada:0 "Invade Canada"
+TEX_invade_canada_desc:0 ""
 ### Ideas ###
 TEX_pattons_mobility_plan:0 "Patton's Mobility Plan"
 TEX_pattons_mobility_plan2:0 "Patton's Mobility Plan"
@@ -584,3 +587,14 @@ unionstate.100.a:0 "Every man is a king!"
 unionstate.130.t:0 "The New America"
 unionstate.130.d:0 "The death of Huey Long swept the American Legion into power lead by William Dudley Pelley. This allowed the extremists within the American First to reshape America to their own desires. And today a new dawn has risen in America. Once located to mainly the south, Jim Crow laws now are the law of the land throughout the country. Christianity has been reinforced as the religion of the people and the country. "
 unionstate.130.a:0 "God Bless America!"
+
+unionstate.200.t:0 "America wishes to join Mittleuropa"
+unionstate.200.d:0 "The American union State has sent us a request to join Mittleuropa. The industrial might of America would be a great boon to the German Empire, and the Americans have promised to help us do everything they can to destroy syndicalism throughout America. It does help that there many German-Americans in the American Union State government. This alliance would help strengthen the ties between America and Germany, though some wonder if we should ally with such a regime in America."
+unionstate.200.a:0 "America can Join"
+unionstate.200.b:0 "We do not need the Americans"
+unionstate.201.t:0 "America in Mittleuropa"
+unionstate.201.d:0 "The Germans have brought us into Mittleuropa. Now together with the Germans we stand together against Syndicalism. "
+unionstate.201.a:0 "Great!"
+
+
+
