Even more work on the AUS

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -191,7 +191,7 @@ TEX_strike_the_international:0 "Strike the International"
 TEX_strike_the_international_desc:0 ""
 TEX_war_plan_brown:0 "Plan Brown"
 TEX_war_plan_brown_desc:0 ""
-TEX_fate_of_the_philippines:0 "Fate of the Philippines"
+TEX_fate_of_the_philippines:0 "Reclaiming Alaska"
 TEX_fate_of_the_philippines_desc:0 ""
 TEX_war_plan_purple:0 "War Plan Purple"
 TEX_war_plan_purple_desc:0 ""
@@ -597,4 +597,18 @@ unionstate.201.d:0 "The Germans have brought us into Mittleuropa. Now together w
 unionstate.201.a:0 "Great!"
 
 
-
+unionstate.202.t:0 "Canada Holds Alaska"
+unionstate.202.d:0 "After the American Union had triumphed in the American Civil War they looked to reclaim the territories that were lost to non-Americans. The Canadians had seized Alaska at the beginning of the war and there was some concern that they did not plan to return it. Long and the leaders of the American Union were considering war with the Entente to reclaim Alaska."
+unionstate.202.a:0 "Demand the Canadians hand over Alaska"
+unionstate.202.b:0 "Allow the Canadians to control Alaska"
+unionstate.203.t:0 "American Union State Demands Alaska Back"
+unionstate.203.d:0 "With the end of the American Civil War and the victory of the AUS, Long and the American Union have requested that Canada relinquishes control of Alaska to them."
+unionstate.203.a:0 "It is ours now."
+unionstate.203.b:0 "Accept their claims"
+unionstate.204.t:0 "Canada Gains Control of Alaska."
+unionstate.204.d:0 "With the end of the American Civil War and the victory of the AUS we have secured our control of Alaska."
+unionstate.204.a:0 "It is ours now."
+unionstate.205.t:0 "Canada Refuses to Relinquish Control of Alaska"
+unionstate.205.d:0 "The Canadian government has refused to relinquish Alaska to the AUS's authority. Some in the AUS are demanding war with Canada over Alaska but many fear a war with the Entente."
+unionstate.205.a:0 "War with Canada"
+unionstate.205.b:0 "We must work with our neighbours"
