Some PRF fixes based on my last test

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -6826,9 +6826,9 @@ MYS_paternal_autocrat_DEF:0 "Mysore State"
 MYS_radical_socialist:0 "Mysore Commune"
 MYS_radical_socialist_ADJ:0 "Mysorean"
 MYS_radical_socialist_DEF:0 "The Mysore Commune"
-MYS_social_conservative:0 "Mysore"
+MYS_social_conservative:0 "Mysore State"
 MYS_social_conservative_ADJ:0 "Mysorean"
-MYS_social_conservative_DEF:0 "Mysore"
+MYS_social_conservative_DEF:0 "Mysore State"
 MYS_social_democrat:0 "Mysore"
 MYS_social_democrat_ADJ:0 "Mysorean"
 MYS_social_democrat_DEF:0 "Mysore"
@@ -6857,9 +6857,9 @@ TRV_paternal_autocrat_DEF:0 "Travancore State"
 TRV_radical_socialist:0 "Travancore Commune"
 TRV_radical_socialist_ADJ:0 "Travancorean"
 TRV_radical_socialist_DEF:0 "The Travancore Commune"
-TRV_social_conservative:0 "Travancore"
+TRV_social_conservative:0 "Travancore State"
 TRV_social_conservative_ADJ:0 "Travancorean"
-TRV_social_conservative_DEF:0 "Travancore"
+TRV_social_conservative_DEF:0 "Travancore State"
 TRV_social_democrat:0 "Travancore"
 TRV_social_democrat_ADJ:0 "Travancorean"
 TRV_social_democrat_DEF:0 "Travancore"
