Just to make the development tooltips a bit nicer-looking

--- a/localisation/KR_Political_events_l_english.yml
+++ b/localisation/KR_Political_events_l_english.yml
@@ -36,12 +36,12 @@ medium_development:0 "Medium Development"
 low_development:0 "Low Development"
 very_low_development:0 "Very Low Development"
 lowest_development:0 "Lowest Development"
-ready_for_highest_development:0 "We are ready to advance to the Highest Development"
-ready_for_very_high_development:0 "We are ready to advance to Very High Development"
-ready_for_high_development:0 "We are ready to advance to High Development"
-ready_for_medium_development:0 "We are ready to advance to Medium Development"
-ready_for_low_development:0 "We are ready to advance to Low Development"
-ready_for_very_low_development:0 "We are ready to advance to Very Low Development"
+ready_for_highest_development:0 "We are ready to advance to §YHighest Development§!\n"
+ready_for_very_high_development:0 "We are ready to advance to §YVery High Development§!\n"
+ready_for_high_development:0 "We are ready to advance to §YHigh Development§!\n"
+ready_for_medium_development:0 "We are ready to advance to §YMedium Development§!\n"
+ready_for_low_development:0 "We are ready to advance to §YLow Development§!\n"
+ready_for_very_low_development:0 "We are ready to advance to §YVery Low Development§Y\n"
 development:0 "Development"
 
 ### Stability Effect ###
