Yet Even more work on the AUS

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -595,8 +595,6 @@ unionstate.200.b:0 "We do not need the Americans"
 unionstate.201.t:0 "America in Mittleuropa"
 unionstate.201.d:0 "The Germans have brought us into Mittleuropa. Now together with the Germans we stand together against Syndicalism. "
 unionstate.201.a:0 "Great!"
-
-
 unionstate.202.t:0 "Canada Holds Alaska"
 unionstate.202.d:0 "After the American Union had triumphed in the American Civil War they looked to reclaim the territories that were lost to non-Americans. The Canadians had seized Alaska at the beginning of the war and there was some concern that they did not plan to return it. Long and the leaders of the American Union were considering war with the Entente to reclaim Alaska."
 unionstate.202.a:0 "Demand the Canadians hand over Alaska"
@@ -612,3 +610,22 @@ unionstate.205.t:0 "Canada Refuses to Relinquish Control of Alaska"
 unionstate.205.d:0 "The Canadian government has refused to relinquish Alaska to the AUS's authority. Some in the AUS are demanding war with Canada over Alaska but many fear a war with the Entente."
 unionstate.205.a:0 "War with Canada"
 unionstate.205.b:0 "We must work with our neighbours"
+
+unionstate.206.t:0 "Fate of Hawaii?"
+unionstate.206.d:0 "Now that we have reclaimed the mainland of America, political eyes have turned outward and our wondering what shall we do about the islands of Hawaii. Many are clamoring for us to retake the isles since they rightfully belong to America since the USA annexed the islands in 1893. While a few say that we don't need them, especially since they are not White Americans. "
+unionstate.206.a:0 "Hawaii is American!"
+unionstate.206.b:0 "We don't need Pinapples in America!"
+unionstate.207.t:0 "The AUS demand!"
+unionstate.207.d:0 "The American Union State has arrived in Honolulu to demand that we surrender to them and join the American Union State. They have arrived with several battleships off the coast of Hawai'i to back up this claim. Many are saying that they rather fight and die for Hawai'i. Of course some politicians are saying that it would be better to save Hawai'ian lives by surrendering"
+unionstate.207.a:0 "Never Surender!"
+unionstate.207.b:0 "Surrender!"
+unionstate.208.t:0 "The AUS gives up Hawai'i"
+unionstate.208.d:0 "While there were numerous concerns that the American Union State would be going to go to war for Hawai'i, an American envoy has arrived saying that the American Union State no longer claims Hawai'i as American territory. We are free from the American Menace. "
+unionstate.208.a:0 "Great!"
+unionstate.209.t:0 "Hawaii refuses!"
+unionstate.209.d:0 "The Hawaiians have responded to our demands by saying that they rather risk war then join America. The question is should we go to war for the islands of Hawaii or should we give up and not risk a conflict in the Pacific? "
+unionstate.209.a:0 "They shall feel the might of America!"
+unionstate.209.b:0 "It is not worth it"
+unionstate.210.t:0 "Hawaii gives in!"
+unionstate.210.d:0 "The Hawaiians have given up and joined America. Today is a great day and the islands of Hawaii are now once again part of America!"
+unionstate.210.a:0 "Great!"
